--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,8 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">#FFFFFF</item>
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
         <item name="android:textColor">#000000</item>
+        <item name="colorPrimaryDark">#FFFFFF</item>
     </style>
 
 </resources>
